--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./js/contenido/contenido.css">
     <link rel="stylesheet" href="./css/config.css">
     
 </head>
@@ -20,7 +21,8 @@
     
 
     <script src="./js/header.js"></script>
-    <script src="./js/contenido.js"></script>
+    <script src="./js/contenido/contenido.js"></script>
     <script src="./js/footer.js"></script>
+
 </body>
 </html>
